--- a/client/src/pages/AuthPages/Organizations/OrganizationForm/OrganizationForm.scss
+++ b/client/src/pages/AuthPages/Organizations/OrganizationForm/OrganizationForm.scss
@@ -51,7 +51,7 @@
   margin-bottom: 2rem;
   max-height: 50vh;
   overflow-y: auto;
-  padding-right: 0.5rem;
+  padding: 0px 0.5rem;
 
   &::-webkit-scrollbar {
     width: 6px;
