--- a/client/src/pages/AuthPages/Organizations/Organizations.scss
+++ b/client/src/pages/AuthPages/Organizations/Organizations.scss
@@ -1,4 +1,3 @@
-
 @use '../../../styles/theme' as *;
 
 .cls-organizations-container {
@@ -176,7 +175,6 @@
   width: 1rem;
   height: 1rem;
   color: #9ca3af;
-  pointer-events: none;
 }
 
 .cls-search-input {
@@ -430,6 +428,16 @@
   padding: 3rem 1rem;
   color: #6b7280;
   font-size: 0.9375rem;
+}
+
+.cls-api-key-code {
+  font-family: "Courier New", monospace;
+  font-size: 0.75rem;
+  background-color: #f3f4f6;
+  padding: 0.25rem 0.5rem;
+  border-radius: 4px;
+  color: #374151;
+  margin-right: 10px;
 }
 
 @media (max-width: 1024px) {
