--- a/client/src/pages/AuthPages/Users/UsersForm/UsersForm.scss
+++ b/client/src/pages/AuthPages/Users/UsersForm/UsersForm.scss
@@ -51,21 +51,21 @@
   margin-bottom: 2rem;
   max-height: 50vh;
   overflow-y: auto;
-  padding-right: 0.5rem;
-  
+  padding: 0px  0.5rem;
+
   &::-webkit-scrollbar {
     width: 6px;
   }
-  
+
   &::-webkit-scrollbar-track {
     background: hsl(var(--muted));
     border-radius: 3px;
   }
-  
+
   &::-webkit-scrollbar-thumb {
     background: hsl(var(--muted-foreground) / 0.3);
     border-radius: 3px;
-    
+
     &:hover {
       background: hsl(var(--muted-foreground) / 0.5);
     }
@@ -226,7 +226,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 1rem;
-  
+
   @media (max-width: 768px) {
     grid-template-columns: 1fr;
   }
