Updated code integration changes

--- a/client/src/components/ui/table-pagination.scss
+++ b/client/src/components/ui/table-pagination.scss
@@ -6,8 +6,12 @@
   flex-wrap: nowrap;
   gap: 2rem;
   width: 100%;
-  margin-top: 2rem;
+  padding: 1rem 3rem;
+  background: #fff;
   // padding-top: 1.5rem;
+  border-radius: 8px;
+  margin-top: 20px;
+  border: 1px solid #e5e7eb
 }
 
 .cls-pagination-info {
