--- a/client/src/pages/AuthPages/Roles/Roles.scss
+++ b/client/src/pages/AuthPages/Roles/Roles.scss
@@ -58,7 +58,7 @@
         width: 1rem;
         height: 1rem;
         color: hsl(var(--muted-foreground));
-        pointer-events: none;
+        // pointer-events: none;
       }
 
       .cls-search-input {
