--- a/client/src/pages/AuthPages/Roles/RolesForm/RolesForm.scss
+++ b/client/src/pages/AuthPages/Roles/RolesForm/RolesForm.scss
@@ -24,7 +24,7 @@
   gap: 1.5rem;
   max-height: 60vh;
   overflow-y: auto;
-  padding-right: 0.5rem;
+  padding:0px 0.5rem;
 
   &::-webkit-scrollbar {
     width: 6px;
