--- a/client/src/pages/AuthPages/Analytics/Analytics.scss
+++ b/client/src/pages/AuthPages/Analytics/Analytics.scss
@@ -323,6 +323,10 @@
   }
 }
 
+.cls-super-admin {
+  grid-template-columns: 1fr 1fr !important; 
+}
+
 // Endpoint Card
 .cls-endpoint-card {
   border: 1px solid #e5e7eb;
